--- a/code/Blazora/Components/BGenerator/BGenerator_Component.razor
+++ b/code/Blazora/Components/BGenerator/BGenerator_Component.razor
@@ -17,6 +17,11 @@
 
 @code{
 
+    protected override void OnInitialized()
+    {
+        base.OnInitialized ();
+        this.need_refresh_buffer_max = 1;
+    }
 
 
 
@@ -52,8 +57,6 @@
     // Stock
     //////////////
 
-    public ObservableProperty<int> get_stock_max (string resource_name)
-        => Game_Engine.self.manager_resource.from_resource_name_get_stock_resource_quantity_max (resource_name);
 
     public int get_stock_val (string resource_name)
         => Game_Engine.self.manager_resource.from_resource_name_get_resource_quantity (resource_name);
@@ -67,10 +70,8 @@
     //////////////
 
     public ObservableProperty<int> get_stack_quantity_max (string resource_name)
-    {
-        return Resource.from_resource_name_get_stack_resource_quantity_max (resource_name);
-    }
-
+        => Resource.from_resource_name_get_stack_resource_quantity_max (resource_name);
+    
 
 
     //////////////
