--- a/code/Blazora/Components/BGenerator/BGenerator_Accessory.razor
+++ b/code/Blazora/Components/BGenerator/BGenerator_Accessory.razor
@@ -21,7 +21,7 @@
 
 @code{
 
-    
+
     public override void listener_setup ()
     {
         base.listener_setup ();
@@ -48,7 +48,7 @@
     }
 
 
-    public void increment ()
+    public virtual void increment ()
     {
         Manager_Resource.resource_transfer (
             Game_Engine.self.manager_resource,
