--- a/code/Blazora/Components/BGenerator/BGenerator_Chest.razor
+++ b/code/Blazora/Components/BGenerator/BGenerator_Chest.razor
@@ -22,7 +22,14 @@
 <div class="chest" style="@(from_position_get_style ())">
 
     @{ 
+
     }
+
+    <Cellicon 
+                picture_filename=@(Resource.from_resource_name_get_resource_filename (get_result_resource_name ()))
+                position=@(new Position (s * -1, s * 0, s, s))
+                />
+
 
     @for (int i = 0; i < this.arr_cellicon.Length; i++)
     {
@@ -83,16 +90,16 @@
         {
             int val = get_val (i);
             string picture_filename_updated = from_val_get_picture_filename (val);
+            string text_bottom_right_updated = from_val_get_text_bottom_right (val);
+
             if (this.arr_cellicon[i].picture_filename != picture_filename_updated)
             {
                 this.arr_cellicon[i].picture_filename = picture_filename_updated;
                 this.arr_cellicon[i].set_need_refresh ();
             }
-
-            string text_bottom_right_updated = from_val_get_text_bottom_right (val);
             if (this.arr_cellicon[i].text_bottom_right != text_bottom_right_updated)
             {
-                this.arr_cellicon[i].text_bottom_right = from_val_get_text_bottom_right (val);
+                this.arr_cellicon[i].text_bottom_right = text_bottom_right_updated;
                 this.arr_cellicon[i].set_need_refresh ();
             }
         }
