--- a/code/Blazora/Components/BGenerator/BGenerator_Transport_Belt_1.razor
+++ b/code/Blazora/Components/BGenerator/BGenerator_Transport_Belt_1.razor
@@ -10,6 +10,8 @@
 
     public ObservableProperty<int> job_percentage = new ObservableProperty<int> ("job_percentage", 0);
 
+    public int stack_max = 16;
+
 }
 
 @{ 
@@ -32,7 +34,7 @@
             action=@(() => increment ())
             text_bottom_right=@($"{stack_tool.quantity}")
             stack_val_current=@(stack_tool.observable_quantity)
-            stack_val_max=@(new ObservableProperty<int> (16))
+            stack_val_max=@(new ObservableProperty<int> (this.stack_max))
             />
 
 
@@ -104,6 +106,14 @@
 
 
 
+    public override void increment ()
+    {
+        if (get_stack_tool (get_complex_resource_name ()).quantity >= this.stack_max)
+        {
+            return;
+        }
+        base.increment ();
+    }
 
 
 
