--- a/code/Blazora/Components/BGenerator/BGenerator_Header_Machine.razor
+++ b/code/Blazora/Components/BGenerator/BGenerator_Header_Machine.razor
@@ -42,7 +42,7 @@
     public override void listener_setup ()
     {
         base.listener_setup ();
-        listener_add ("tool", get_stack_tool ().observable_quantity);
+        listener_add ("BGenerator_Header_Machine tool", get_stack_tool ().observable_quantity);
     }
 
 
