--- a/code/Blazora/Components/BGenerator/BGenerator_Header_Hand.razor
+++ b/code/Blazora/Components/BGenerator/BGenerator_Header_Hand.razor
@@ -35,6 +35,7 @@
               position=@(new Position (s * 6, s * (this.recipe.get_component_count () - 1), s, s))
               text_middle_right="^"
               action=@(() => Game_Action.upgrade_tool (this.generator_id, "furnace_stone"))
+              val_authorize=@(is_action_authorized ())
               />
 }
 else if (stack_tool.resource_name == "hand" && Game_Engine.self.manager_toggle.is_true ("know_assembling_machine_1") == true)
@@ -44,6 +45,7 @@ else if (stack_tool.resource_name == "hand" && Game_Engine.self.manager_toggle.i
               position=@(new Position (s * 6, s * (this.recipe.get_component_count () - 1), s, s))
               text_middle_right="^"
               action=@(() => Game_Action.upgrade_tool (this.generator_id, "assembling_machine_1"))
+              val_authorize=@(is_action_authorized ())
               />
 }
 
@@ -60,8 +62,29 @@ else if (stack_tool.resource_name == "hand" && Game_Engine.self.manager_toggle.i
     public override void listener_setup ()
     {
         base.listener_setup ();
-
+        if (get_stack_tool ().resource_name == "fire")
+        {
+            listener_add ("BGenerator_Header_Hand tool", Game_Engine.self.manager_resource.from_resource_name_get_resource_stack ("furnace_stone").observable_quantity);
+        }
+        else
+        {
+            listener_add ("BGenerator_Header_Hand tool", Game_Engine.self.manager_resource.from_resource_name_get_resource_stack ("assembling_machine_1").observable_quantity);
+        }
     }
 
+
+    public bool is_action_authorized ()
+    {
+        if (get_stack_tool ().resource_name == "fire")
+        {
+            return Game_Engine.self.manager_resource.from_resource_name_get_resource_quantity (
+                "furnace_stone") >= 1;
+        }
+        else
+        {
+            return Game_Engine.self.manager_resource.from_resource_name_get_resource_quantity (
+                "assembling_machine_1") >= 1;
+        }
+    }
 
 }
