--- a/code/Blazora/Pages/Factorio.razor
+++ b/code/Blazora/Pages/Factorio.razor
@@ -13,15 +13,14 @@
 @using NS_Blazora_Basic
 @using Blazora.Script
 @using System.Linq
+@using System.Collections.Generic
+@using NS_Game_Engine.NS_Quest
+@using BlazorApp.Shared.Models
+ 
 
 @code{
 
 
-    public void test ()
-    {
-
-
-    }
 
 }
 
@@ -38,6 +37,7 @@
 <h3>Factorio</h3>
     
     <button @onclick=@(() => Game_Setup.quickstart ()) >Quickstart</button>
+    <button @onclick=@(() => { Factorio.nb += 1; Game_Page.self.change_state (); }) >End</button>
 
     <br /><br />
 
@@ -49,22 +49,36 @@
             {
                 await Game_Setup.setup ();
                 Game_Setup.initialized = true;
+
+                Console.WriteLine ("Page setup finished");
             }
         }
 
 
     protected override async Task OnInitializedAsync ()
     {
+        Console.WriteLine ("Page OnInitializedAsync start");
+
         await base.OnInitializedAsync ();
         await setup ();
+        
 
         Game_Setup.listener_flag_setup ();
 
-        this.clock_second.changed += (v) => Game_Engine.self.manager_quest.logical_update ();
+        this.clock_second.changed += (v) => quest_update ();
+
+        Console.WriteLine ("Page OnInitializedAsync finished");
     }
 
 
-
+    public void quest_update ()
+    {
+        bool changed = Game_Engine.self.manager_quest.logical_update ();
+        if (changed == true)
+        {
+            Game_Page.self.change_state ();
+        }
+    }
 
 
     protected override void OnInitialized ()
@@ -83,14 +97,58 @@
 
     <div style="margin-left: 36px;">
 
-        @foreach (Generator generator in Game_Engine.self.manager_generator.Values)
+        @{ 
+            List<Generator> list_generator_authorized = Game_Engine.self.manager_generator.Values
+                .Where (generator => 
+                    Game_Engine.self.manager_quest
+                    .from_generator_is_authorized (generator) == true)
+                .ToList ();
+        }
+
+        @foreach (Generator generator_authorized in list_generator_authorized)
         {
-            <CascadingValue Value=generator.id >
+            <CascadingValue Value=generator_authorized.id >
                 <BGenerator />
             </CascadingValue>
 
             <div><br /></div>
         }
+
+        @{ 
+            List<Quest> list_quest_finished = Game_Engine.self.manager_quest.Values
+                .Where (quest => quest.state == Quest.State.finished || 
+                        quest.state == Quest.State.started)
+                .ToList ();
+
+
+        }
+
+        @foreach (Quest quest_finished in list_quest_finished)
+        {
+            <Quest_Info quest=@(quest_finished) />
+                
+            <div><br /></div>
+            <div><br /></div>
+           
+        }
+
+        @{ 
+            List<Quest> list_quest_unknown = Game_Engine.self.manager_quest.Values
+                .Where (quest => quest.state == Quest.State.unknown)
+                .ToList ();
+
+        }
+        
+        @if (Game_Engine.self.manager_quest.Values.Count > 0 &&
+            list_quest_finished.Count == 0 && 
+            list_quest_unknown.Count == 0)
+        {
+            <Ending_Panel />
+        }
+        
+            <div><br /></div>
+            <div><br /></div>
+
 
     </div>
 </div>
